ANTLR Tutorial 3.x - 1/antlr-generated/a/b/c/SampleParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g 2010-03-18 18:08:10

  package a.b.c;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/*******************************************************************************
 * Copyright (c) 2009 Scott Stanchfield
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *******************************************************************************/
public class SampleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "INTEGER", "STRING_LITERAL", "CHAR_LITERAL", "MULTILINE_COMMENT", "LETTER", "DIGIT", "WS", "COMMENT", "'program'", "'='", "'begin'", "'end'", "'.'", "'constant'", "':'", "':='", "';'", "'var'", "','", "'Integer'", "'Boolean'", "'String'", "'Char'", "'type'", "'array'", "'['", "'..'", "']'", "'of'", "'record'", "'<'", "'>'", "'('", "')'", "'if'", "'then'", "'elsif'", "'else'", "'exit'", "'when'", "'while'", "'loop'", "'return'", "'procedure'", "'function'", "'not'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'/='", "'<='", "'>='", "'and'", "'or'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=9;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int MULTILINE_COMMENT=8;
    public static final int T__58=58;
    public static final int STRING_LITERAL=6;
    public static final int T__16=16;
    public static final int T__51=51;
    public static final int T__15=15;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__59=59;
    public static final int IDENT=4;
    public static final int DIGIT=10;
    public static final int COMMENT=12;
    public static final int T__50=50;
    public static final int INTEGER=5;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=11;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int CHAR_LITERAL=7;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators


        public SampleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SampleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SampleParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g"; }



    // $ANTLR start "program"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:22:1: program : 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.' ;
    public final void program() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:23:2: ( 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:23:4: 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.'
            {
            match(input,13,FOLLOW_13_in_program42); 
            match(input,IDENT,FOLLOW_IDENT_in_program44); 
            match(input,14,FOLLOW_14_in_program46); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:3: ( constant | variable | function | procedure | typeDecl )*
            loop1:
            do {
                int alt1=6;
                switch ( input.LA(1) ) {
                case 18:
                    {
                    alt1=1;
                    }
                    break;
                case 22:
                    {
                    alt1=2;
                    }
                    break;
                case 49:
                    {
                    alt1=3;
                    }
                    break;
                case 48:
                    {
                    alt1=4;
                    }
                    break;
                case 28:
                    {
                    alt1=5;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:4: constant
            	    {
            	    pushFollow(FOLLOW_constant_in_program51);
            	    constant();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:15: variable
            	    {
            	    pushFollow(FOLLOW_variable_in_program55);
            	    variable();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:26: function
            	    {
            	    pushFollow(FOLLOW_function_in_program59);
            	    function();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:37: procedure
            	    {
            	    pushFollow(FOLLOW_procedure_in_program63);
            	    procedure();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:24:49: typeDecl
            	    {
            	    pushFollow(FOLLOW_typeDecl_in_program67);
            	    typeDecl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,15,FOLLOW_15_in_program73); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:26:3: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDENT||LA2_0==39||(LA2_0>=45 && LA2_0<=46)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:26:3: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program77);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,16,FOLLOW_16_in_program82); 
            match(input,IDENT,FOLLOW_IDENT_in_program84); 
            match(input,17,FOLLOW_17_in_program86); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "constant"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:30:1: constant : 'constant' IDENT ':' type ':=' expression ';' ;
    public final void constant() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:31:2: ( 'constant' IDENT ':' type ':=' expression ';' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:31:4: 'constant' IDENT ':' type ':=' expression ';'
            {
            match(input,18,FOLLOW_18_in_constant97); 
            match(input,IDENT,FOLLOW_IDENT_in_constant99); 
            match(input,19,FOLLOW_19_in_constant101); 
            pushFollow(FOLLOW_type_in_constant103);
            type();

            state._fsp--;

            match(input,20,FOLLOW_20_in_constant105); 
            pushFollow(FOLLOW_expression_in_constant107);
            expression();

            state._fsp--;

            match(input,21,FOLLOW_21_in_constant109); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "constant"


    // $ANTLR start "variable"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:34:1: variable : 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';' ;
    public final void variable() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:2: ( 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:4: 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';'
            {
            match(input,22,FOLLOW_22_in_variable120); 
            match(input,IDENT,FOLLOW_IDENT_in_variable122); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:16: ( ',' IDENT )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==23) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:17: ',' IDENT
            	    {
            	    match(input,23,FOLLOW_23_in_variable125); 
            	    match(input,IDENT,FOLLOW_IDENT_in_variable127); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,19,FOLLOW_19_in_variable131); 
            pushFollow(FOLLOW_type_in_variable133);
            type();

            state._fsp--;

            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:38: ( ':=' expression )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==20) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:35:39: ':=' expression
                    {
                    match(input,20,FOLLOW_20_in_variable136); 
                    pushFollow(FOLLOW_expression_in_variable138);
                    expression();

                    state._fsp--;


                    }
                    break;

            }

            match(input,21,FOLLOW_21_in_variable142); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variable"


    // $ANTLR start "type"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:38:1: type : ( 'Integer' | 'Boolean' | 'String' | 'Char' | IDENT | typeSpec );
    public final void type() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:39:2: ( 'Integer' | 'Boolean' | 'String' | 'Char' | IDENT | typeSpec )
            int alt5=6;
            switch ( input.LA(1) ) {
            case 24:
                {
                alt5=1;
                }
                break;
            case 25:
                {
                alt5=2;
                }
                break;
            case 26:
                {
                alt5=3;
                }
                break;
            case 27:
                {
                alt5=4;
                }
                break;
            case IDENT:
                {
                alt5=5;
                }
                break;
            case 29:
            case 34:
            case 35:
                {
                alt5=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:39:4: 'Integer'
                    {
                    match(input,24,FOLLOW_24_in_type154); 

                    }
                    break;
                case 2 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:40:4: 'Boolean'
                    {
                    match(input,25,FOLLOW_25_in_type159); 

                    }
                    break;
                case 3 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:41:4: 'String'
                    {
                    match(input,26,FOLLOW_26_in_type164); 

                    }
                    break;
                case 4 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:42:4: 'Char'
                    {
                    match(input,27,FOLLOW_27_in_type169); 

                    }
                    break;
                case 5 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:43:4: IDENT
                    {
                    match(input,IDENT,FOLLOW_IDENT_in_type174); 

                    }
                    break;
                case 6 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:44:4: typeSpec
                    {
                    pushFollow(FOLLOW_typeSpec_in_type179);
                    typeSpec();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "type"


    // $ANTLR start "typeDecl"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:47:1: typeDecl : 'type' IDENT '=' typeSpec ';' ;
    public final void typeDecl() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:48:2: ( 'type' IDENT '=' typeSpec ';' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:48:4: 'type' IDENT '=' typeSpec ';'
            {
            match(input,28,FOLLOW_28_in_typeDecl191); 
            match(input,IDENT,FOLLOW_IDENT_in_typeDecl193); 
            match(input,14,FOLLOW_14_in_typeDecl195); 
            pushFollow(FOLLOW_typeSpec_in_typeDecl197);
            typeSpec();

            state._fsp--;

            match(input,21,FOLLOW_21_in_typeDecl199); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "typeDecl"


    // $ANTLR start "typeSpec"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:51:1: typeSpec : ( arrayType | recordType | enumType );
    public final void typeSpec() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:52:2: ( arrayType | recordType | enumType )
            int alt6=3;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt6=1;
                }
                break;
            case 34:
                {
                alt6=2;
                }
                break;
            case 35:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:52:4: arrayType
                    {
                    pushFollow(FOLLOW_arrayType_in_typeSpec211);
                    arrayType();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:53:4: recordType
                    {
                    pushFollow(FOLLOW_recordType_in_typeSpec216);
                    recordType();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:54:4: enumType
                    {
                    pushFollow(FOLLOW_enumType_in_typeSpec221);
                    enumType();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "typeSpec"


    // $ANTLR start "arrayType"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:57:1: arrayType : 'array' '[' INTEGER '..' INTEGER ']' 'of' type ;
    public final void arrayType() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:58:2: ( 'array' '[' INTEGER '..' INTEGER ']' 'of' type )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:58:4: 'array' '[' INTEGER '..' INTEGER ']' 'of' type
            {
            match(input,29,FOLLOW_29_in_arrayType233); 
            match(input,30,FOLLOW_30_in_arrayType235); 
            match(input,INTEGER,FOLLOW_INTEGER_in_arrayType237); 
            match(input,31,FOLLOW_31_in_arrayType239); 
            match(input,INTEGER,FOLLOW_INTEGER_in_arrayType241); 
            match(input,32,FOLLOW_32_in_arrayType243); 
            match(input,33,FOLLOW_33_in_arrayType245); 
            pushFollow(FOLLOW_type_in_arrayType247);
            type();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "arrayType"


    // $ANTLR start "recordType"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:61:1: recordType : 'record' ( field )* 'end' 'record' ;
    public final void recordType() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:62:2: ( 'record' ( field )* 'end' 'record' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:62:4: 'record' ( field )* 'end' 'record'
            {
            match(input,34,FOLLOW_34_in_recordType259); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:62:13: ( field )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDENT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:62:13: field
            	    {
            	    pushFollow(FOLLOW_field_in_recordType261);
            	    field();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,16,FOLLOW_16_in_recordType264); 
            match(input,34,FOLLOW_34_in_recordType266); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "recordType"


    // $ANTLR start "field"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:65:1: field : IDENT ':' type ';' ;
    public final void field() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:66:2: ( IDENT ':' type ';' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:66:4: IDENT ':' type ';'
            {
            match(input,IDENT,FOLLOW_IDENT_in_field278); 
            match(input,19,FOLLOW_19_in_field280); 
            pushFollow(FOLLOW_type_in_field282);
            type();

            state._fsp--;

            match(input,21,FOLLOW_21_in_field284); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "field"


    // $ANTLR start "enumType"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:69:1: enumType : '<' IDENT ( ',' IDENT )* '>' ;
    public final void enumType() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:70:2: ( '<' IDENT ( ',' IDENT )* '>' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:70:4: '<' IDENT ( ',' IDENT )* '>'
            {
            match(input,35,FOLLOW_35_in_enumType296); 
            match(input,IDENT,FOLLOW_IDENT_in_enumType298); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:70:14: ( ',' IDENT )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==23) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:70:15: ',' IDENT
            	    {
            	    match(input,23,FOLLOW_23_in_enumType301); 
            	    match(input,IDENT,FOLLOW_IDENT_in_enumType303); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            match(input,36,FOLLOW_36_in_enumType307); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "enumType"


    // $ANTLR start "statement"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:73:1: statement : ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement );
    public final void statement() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:74:2: ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement )
            int alt9=5;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==20) ) {
                    alt9=1;
                }
                else if ( (LA9_1==37) ) {
                    alt9=5;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;
                }
                }
                break;
            case 39:
                {
                alt9=2;
                }
                break;
            case 46:
                {
                alt9=3;
                }
                break;
            case 45:
                {
                alt9=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:74:4: assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement319);
                    assignmentStatement();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:75:4: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement324);
                    ifStatement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:76:4: loopStatement
                    {
                    pushFollow(FOLLOW_loopStatement_in_statement329);
                    loopStatement();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:77:4: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement334);
                    whileStatement();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:78:4: procedureCallStatement
                    {
                    pushFollow(FOLLOW_procedureCallStatement_in_statement339);
                    procedureCallStatement();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "procedureCallStatement"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:81:1: procedureCallStatement : IDENT '(' ( actualParameters )? ')' ';' ;
    public final void procedureCallStatement() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:82:2: ( IDENT '(' ( actualParameters )? ')' ';' )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:82:4: IDENT '(' ( actualParameters )? ')' ';'
            {
            match(input,IDENT,FOLLOW_IDENT_in_procedureCallStatement351); 
            match(input,37,FOLLOW_37_in_procedureCallStatement353); 
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:82:14: ( actualParameters )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( ((LA10_0>=IDENT && LA10_0<=CHAR_LITERAL)||LA10_0==37||(LA10_0>=50 && LA10_0<=52)) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:82:14: actualParameters
                    {
                    pushFollow(FOLLOW_actualParameters_in_procedureCallStatement355);
                    actualParameters();

                    state._fsp--;


                    }
                    break;

            }

            match(input,38,FOLLOW_38_in_procedureCallStatement358); 
            match(input,21,FOLLOW_21_in_procedureCallStatement360); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "procedureCallStatement"


    // $ANTLR start "actualParameters"
    // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:85:1: actualParameters : expression ( ',' expression )* ;
    public final void actualParameters() throws RecognitionException {
        try {
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:86:2: ( expression ( ',' expression )* )
            // C:\\eclipse352\\workspace\\ANTLR Tutorial 3.x - 1\\src\\a\\b\\c\\Sample.g:86:4: expression ( ',' expression )*
            {
            pushFollow(FOLLOW_expression_in_actualParameters372);
            expression();

            state._fsp--;
